<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidSqlite</string>
    <string name="action_settings">Settings</string>
    <string name="IntroduccionDatos"> Introduccion de datos </string>
 	<string name="Nombre"> Nombre </string>
 	<string name="Telefono"> Teléfono </string>
    
    
    <string name="textButton1"> Insertar contacto </string>
    <string name="textButton2"> Llamar al contacto </string>
	<string name="textButton3"> Eliminar BD </string>
	<string name="textButton4"> Cerrar aplicación </string>
    	
</resources>
